// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`KinoGer Blood & Sinners 1`] = `
[
  {
    "format": "hls",
    "label": "KinoGer",
    "meta": {
      "countryCodes": [],
      "height": 1080,
      "title": "Blood.and.Sinners.2025.mkv",
    },
    "requestHeaders": {
      "Referer": "https://kinoger.re",
    },
    "sourceId": "kinoger_",
    "ttl": 21600000,
    "url": "https://scvo.processorprediction.shop/v4/bgm/ge5fhb/cf-master.txt?v=1748766126",
  },
]
`;

exports[`KinoGer Dead City 1`] = `
[
  {
    "format": "hls",
    "label": "KinoGer",
    "meta": {
      "countryCodes": [],
      "height": 1080,
      "title": "the.walking.dead.dead.city.s02e05.german.dl.1080p.web.x264-wvf.mkv",
    },
    "requestHeaders": {
      "Referer": "https://kinoger.re",
    },
    "sourceId": "kinoger_",
    "ttl": 21600000,
    "url": "https://sipt.responseautomation.cyou/v4/vz1/x6tsx9/cf-master.txt?v=1748957184",
  },
]
`;
